# rust-cross-platform

./: Cargo.toml  README.md
src/: main.rs
src/fs/: file_obj.rs  mod.rs
src/pal/: mod.rs
src/pal/unix/: file.rs  file_types.rs
src/pal/windows/: file.rs
