[package]
name = "rust_cross_platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unix"]

unix = []
windows = []

[dependencies]
cfg-if = "1.0.0"



[target.'cfg(unix)'.dependencies]
libc = "0.2.146"
